--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <footer></footer>
   <!-- MODAL --> 
   <script src="./task-1.js"></script>
-  <script src="./task-2.js"></script>
-  <script src="./task-3.js"></script>
+  <script type="module" src="./task-2.js"></script>
+  <script type="module" src="./task-3.js"></script>
 </body>
 </html>
