--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   <!-- FOOTER -->
   <footer></footer>
   <!-- MODAL --> 
-  <script src="./task-1.js"></script>
-  <script type="module" src="./task-2.js"></script>
-  <script type="module" src="./task-3.js"></script>
+  <script src="./js/task-1.js"></script>
+  <script type="module" src="./js/task-2.js"></script>
+  <script type="module" src="./js/task-3.js"></script>
 </body>
 </html>
